--- a/templates/main.html
+++ b/templates/main.html
@@ -33,6 +33,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Hubungi Kami</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/register">Registrasi</a>
+              </li>
             </ul>
           </div>
         </div>
